--- a/content/Gtk/Gtk.adoc
+++ b/content/Gtk/Gtk.adoc
@@ -86,6 +86,10 @@ Compile :
 	 g++ -std=c++11 TestGtkmm.cc -o TestGtkmm.exe $(pkg-config gtkmm-3.0 --cflags --libs | sed 's/ -I/ -isystem /g')
 
 
+:!safe-mode-secure:
+
+:safe-mode-unsafe:
+
 ifdef::safe-mode-unsafe[]
 SafeMode: UNSAFE
 endif::safe-mode-unsafe[]
