trick to set unsafe mode

--- a/content/Gtk/Gtk.adoc
+++ b/content/Gtk/Gtk.adoc
@@ -75,7 +75,7 @@ https://wiki.gnome.org/Projects/gtkmm/MSWindows
 	pacman -S pkg-config
 
 === Quick example
-
+:safe-mode-unsafe:
 [source, c++]
 ----
 include::src/TestGtkmm.cc[]
