--- a/content/UnitTests/UnitTests.adoc
+++ b/content/UnitTests/UnitTests.adoc
@@ -3,7 +3,8 @@ Doc Writer <christian.popescu@outlook.com>
 v 1.0, 2019-12-14
 :sectnums:
 :toc:
-
+:toclevels: 5
++
 include::GoogleTest/GoogleTest.adoc[]
 
 // include::ncurses/ncurses.adoc[]
