--- a/content/Frameworks/Spring/Spring.adoc
+++ b/content/Frameworks/Spring/Spring.adoc
@@ -17,7 +17,7 @@ The Spring Framework provides a comprehensive programming and configuration mode
 
 https://spring.io/projects/spring-framework[Spring Framework Project Site]
 
-Features :
+=== Features :
 
 - Core technologies
 - Testing 
@@ -25,3 +25,23 @@ Features :
 - Spring MVC and SpringWebFlux web frameworks
 - Integration: remoting, JMS, JCA, JMX, email, tasks, scheduling, cache.
 - Languages: Kotlin, Groovy, dynamic languages
+
+
+== Spring Boot
+
+*Spring Boot* makes it easy to create stand-alone, production-grade Spring based Applications that you can "just run".
+
+https://spring.io/projects/spring-boot[Spring Boot Project Site] 
+
+=== Features
+- Create stand-alone Spring applications
+
+- Embed Tomcat, Jetty or Undertow directly (no need to deploy WAR files)
+
+- Provide opinionated 'starter' dependencies to simplify your build configuration
+
+- Automatically configure Spring and 3rd party libraries whenever possible
+
+- Provide production-ready features such as metrics, health checks, and externalized configuration
+
+- Absolutely no code generation and no requirement for XML configuration
