--- a/content/TextEditors/Emacs/Emacs.adoc
+++ b/content/TextEditors/Emacs/Emacs.adoc
@@ -3,7 +3,7 @@ Doc Writer <christian.popescu@outlook.com>
 v 1.0, 2019-12-25
 :toc:
 
-*Emacs* is an extensible, customizable, free/libre text editor — and more.
+*Emacs* is an extensible, customizable, free/libre text editor -- and more.
 
 https://www.gnu.org/software/emacs/[Project site]
 
