Change images path for Qt and GuiFrameworks.adoc

--- a/content/GuiFrameworks/GuiFrameworks.adoc
+++ b/content/GuiFrameworks/GuiFrameworks.adoc
@@ -8,6 +8,7 @@ v 1.0, 2019-12-21
 == Introduction
 Gui Frameworks known also as widget toolkits are used to construct Graphical User Interface programs.
 
+:imagedir: Qt/img
 include::Qt/Qt.adoc[]
 
-// include::ncrses/ncurses.adoc[]
+
