--- a/content/DevOps/PackageManagementSystems/PackageManagementSystems.adoc
+++ b/content/DevOps/PackageManagementSystems/PackageManagementSystems.adoc
@@ -3,15 +3,12 @@
 Doc Writer <christian.popescu@outlook.com>
 v 1.0, 2020-06-24
 
-:sectnums:
-:toc:
-:toclevels: 5
 
 = Introduction
 
 
+include::NuGet.adoc[]
 
-include::Nexus/Nexus.adoc[]
 
 
 
