--- a/content/DevOps/PackageManagementSystems/NuGet.adoc
+++ b/content/DevOps/PackageManagementSystems/NuGet.adoc
@@ -19,4 +19,10 @@ The .NET Core CLI, dotnet.exe, works on all platforms (Windows, Mac, and Linux) 
 The nuget.exe CLI, nuget.exe, is the command-line utility for Windows that provides all NuGet capabilities.
 
 
+== Package management
 
+=== Configuration
+
+User configuration file location and content example
+
+image::/img/NuGet Config File.png[]
