--- a/content/TuiFrameworks/TuiFrameworks.adoc
+++ b/content/TuiFrameworks/TuiFrameworks.adoc
@@ -11,6 +11,6 @@ v 1.0, 2020-07-13
 include::../LinuxUserInterfaceLibraries/ncurses/ncurses.adoc[]
 == References
 
-https://en.wikipedia.org/wiki/Text-based_user_interface[Wikipedia]
+https://en.wikipedia.org/wiki/Text-based_user_interface[Wikipedia - Text based user interfaces]
 
 
