--- a/content/Miscellaneous/Miscellaneous.adoc
+++ b/content/Miscellaneous/Miscellaneous.adoc
@@ -56,3 +56,19 @@ Optional dependencies for ruby
 7. Add Cmake
 
 	pacman -S mingw-w64-i686-cmake mingw-w64-x86_64-cmake 
+    
+    
+== Unicode issue on Git Bash Window
+
+=== Context
+Java Text User Interface Application that use UTF8 codes for graphical driving (boxes).
+
+=== The problem
+Problem solved on Windows. When the same program runs on Git Bash strage characters has been printed.
+
+=== Solution 
+On MingW window set the Locale as default and charset as UTF8.
+
+image::img/Unicode_set_mingw.png[]
+
+image::img/Unicode_set_mingw_charset.png[]
